--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "marked": "^15.0.12",
+    "marked": "^16.0.0",
     "nuxt": "^3.17.5",
+    "nuxt-icon": "^1.0.0-beta.7",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   }
